2003-01-24  Ion Badulescu  <ionut@moisil.badula.org>

	* doc/am-utils.texi (opts Option): "sftlookup" -> "softlookup"

	* NEWS: "sftlookup" -> "softlookup"

	* amd/ops_nfs.c (nfs_mount): "sftlookup" -> "softlookup", also
	check for "nosoftlookup" in combination with "soft"

2003-01-23  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* m4/macros/check_nfs_fh_dref.m4: darwin/rhapsody is another
	freebsd22 derivative

	* NEWS: updated for Darwin changes

	* .cvsignore: added A.i386-apple-darwin6.0

	* m4/macros/os_cflags.m4: add -D_P1003_1B_VISIBLE to cflags for
	Darwin

2003-01-23  Erez Zadok  <ezk@cs.sunysb.edu>

	* conf/mount/mount_aix.c (mount_aix3): clean back this file from
	all the debugging cruft that is no longer needed (and really was
	never needed in the first place).

2003-01-10  Erez Zadok  <ezk@cs.sunysb.edu>

	* scripts/test-amd.{misc,conf}: simple amd.conf and amd.misc
	(map) files for testing basic amd functionality such as whether it
	can mount its own mount NFS points.

2002-12-28  Ion Badulescu  <ionut@moisil.badula.org>

	* amd/srvr_nfs.c (start_nfs_pings): don't set FSF_PINGING if
	pings are disabled

	* libamu/xdr_func.c (xdr_ftype): use a local enum_t variable
	instead of casting the pointer to (enum_t *)
	(xdr_mountstat3): ditto
	(xdr_nfsstat): ditto

	* libamu/misc_rpc.c (make_rpc_packet): fix make_rpc_packet() on
	64-bit big-endian platforms, bug report from Bill Fenner
	<fenner@research.att.com>

	* configure.in: increase library patchlevel

	* libamu/xutil.c (amu_release_controlling_tty): close and reopen
	file descriptors 0,1,2 before calling setsid()

2002-12-27  Erez Zadok  <ezk@cs.sunysb.edu>

	* updated copyright year to 2003 on all files

2002-12-10  Erez Zadok  <ezk@localhost.localdomain>

	* rename "aux/" subdir into "m4/" so as to avoid problems with
	MS-DOS systems (where "AUX" is a reserved name).  This required
	fixing numerous files.

2002-12-10  Erez Zadok  <ezk@filer.fsl.cs.sunysb.edu>
